--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/cors": "^2.8.13",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "database": "*"
   }
 }
