--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,9 +16,12 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "database": "*",
     "express": "^4.18.2",
-    "database": "*"
+    "jsonwebtoken": "^9.0.2"
   }
 }
