--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "packages/*"
   ],
   "dependencies": {
-    "@prisma/client": "^5.2.0"
+    "@prisma/client": "^5.2.0",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
