--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "zod-types": "*",
-    "type-checks": "*"
+    "type-checks": "*",
+    "s3": "*"
   }
 }
