--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "recoil": "^0.7.7",
+    "store": "*"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
