--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@prisma/client": "^5.2.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "recoil": "^0.7.7",
     "zod": "^3.22.2"
   }
 }
