added products infinite scrolling

--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
+  "globalDotEnv":[".env"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
@@ -8,6 +9,7 @@
     },
     "lint": {},
     "dev": {
+      "dotEnv":[".env"],
       "cache": false,
       "persistent": true
     }
