--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "install": "^0.13.0",
+    "npm": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.15.0",
+    "react-select": "^5.7.4",
     "recoil": "^0.7.7",
     "store": "*"
   },
