--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@prisma/client": "^5.2.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "bootstrap": "^5.3.1",
+    "react-bootstrap": "^2.8.0",
     "react-hot-toast": "^2.4.1",
     "recoil": "^0.7.7",
     "store": "^1.0.0",
