--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-slick": "^0.23.10",
     "install": "^0.13.0",
     "npm": "^10.0.0",
     "react": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.15.0",
     "react-select": "^5.7.4",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
     "store": "*"
   },
