--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "prisma": "^5.2.0"
+  },
+  "dependencies": {
+    "recoil-persist": "^5.1.0"
   }
 }
